--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     />
     <meta
       property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="https://github.com/BlazeTheGr8/image-repo/blob/main/meta-pic.png?raw=true"
     />
 
     <!-- Twitter -->
