--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="https://github.com/BlazeTheGr8/image-repo/blob/main/meta-pic.png?raw=true"
     />
 
     <!-- Meta Tags Generated with https://metatags.io -->
