--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/BlazeTheGr8/image-repo/blob/main/apple-touch-icon.png?raw=true" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/BlazeTheGr8/image-repo/blob/main/favicon-32x32.png?raw=true" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/BlazeTheGr8/image-repo/blob/main/favicon-16x16.png?raw=true" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
